--- a/plates/application.html
+++ b/plates/application.html
@@ -1,7 +1,7 @@
 <html><head>
 <meta http-equiv="Content-Language" content="en">
-          <meta http-equiv="Content-Type" content="text/html; charset="utf-8">
-  <title>jsTree test</title>
+          <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
+  <title>HDF5 Viewer</title>
   <link rel="stylesheet" type="text/css" href="js/jsTree/themes/default/style.min.css" />
   <link rel="stylesheet" href="css/dragbar.css"/>
   <link rel="stylesheet" href="css/h5editing.css"/>
