major reworking of flow.  The server side will do the upgrade, be the same port and stay running along side the https server.  ssl added

--- a/plates/application.html
+++ b/plates/application.html
@@ -2,14 +2,14 @@
 <meta http-equiv="Content-Language" content="en">
           <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
   <title>HDF5 Viewer</title>
-  <link rel="stylesheet" type="text/css" href="js/jsTree/themes/default/style.min.css" />
+  <link rel="stylesheet" type="text/css" href="js/jstree/themes/default/style.min.css" />
   <link rel="stylesheet" href="css/dragbar.css"/>
   <link rel="stylesheet" href="css/h5editing.css"/>
   <link rel="stylesheet" href="css/nv.d3.css"/>
   <!-- 2 load the theme CSS file -->
-  <script type="text/javascript" src="js/jsTree/libs/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="js/jquery/jquery.js"></script>
   <!--script type="text/javascript" src="js/jsTree/libs/jquery.cookie.js"></script-->
-  <script type="text/javascript" src="js/jquery-ui-1.11.2/jquery-ui.js"></script>
+  <script type="text/javascript" src="js/jquery-ui/jquery-ui.js"></script>
   <script type="text/javascript" src="js/dragbar.js"></script>
   <script type="text/javascript" src="HDF5Interface.js"></script>
   </head>
@@ -18,9 +18,7 @@
         <span id="position"></span>
         <div id="dragbar"></div>
         <div id="h5tree"></div>
-        <script src="js/jsTree/libs/jquery-2.1.1.js"></script>
-        <script src="js/jsTree/libs/jquery.json.min.js"></script>
-        <script src="js/jsTree/jstree.js"></script>
+        <script src="js/jstree/jstree.js"></script>
         <script>${h5tree}</script>
     </div>
     <!--div id="main" dropzone="copy file:image/png file:image/gif file:image/jpeg file:text/csv" ondragstart="dragStartHandler(event, this)" ondrag="dragHandler(event, this)" ondragend="dragEndHandler(event, this)" ondrop="dropHandler(event, this)"-->
